# vps_download

./: .devcontainer.json  .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  prod.env  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: black-format.yml  docker_release.yaml  pylama-lint.yml
docker/: Dockerfile
vps_download/: __main__.py  data_type.py  do_once.py  server_api.py  test_server_api.py
