[tool.poetry]
name = "vps_download"
version = "0.1.0"
description = "VPS下载测试"
authors = ["dev <dev@qiyutech.tech>"]

[tool.poetry.dependencies]
python = "^3.9"

click = "*"
requests = ">=2.25,<3"
pydantic = ">=1.7,<2.0"
apscheduler = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
black = "*"
pylama = "*"
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
